force_publish_final.txt
--- SYSTEM TIME ---
Remote EXEC: date
Mon Feb  9 20:19:33 UTC 2026

--- CONTAINER TIME ---
Remote EXEC: docker exec football-prod_app_1 date
Mon Feb  9 20:19:35 UTC 2026

--- PUBLISHING GAME 47 ---
Remote EXEC: docker exec football-prod_app_1 python3 -c 'import asyncio; from app.scheduler.tasks import publish_game_task; asyncio.run(publish_game_task(47))'
Config loaded via os.getenv
2026-02-09 20:19:43,460 INFO sqlalchemy.engine.Engine select pg_catalog.version()
INFO:sqlalchemy.engine.Engine:select pg_catalog.version()
2026-02-09 20:19:43,460 INFO sqlalchemy.engine.Engine [raw sql] ()
INFO:sqlalchemy.engine.Engine:[raw sql] ()
2026-02-09 20:19:43,465 INFO sqlalchemy.engine.Engine select current_schema()
INFO:sqlalchemy.engine.Engine:select current_schema()
2026-02-09 20:19:43,465 INFO sqlalchemy.engine.Engine [raw sql] ()
INFO:sqlalchemy.engine.Engine:[raw sql] ()
2026-02-09 20:19:43,468 INFO sqlalchemy.engine.Engine show standard_conforming_strings
INFO:sqlalchemy.engine.Engine:show standard_conforming_strings
2026-02-09 20:19:43,468 INFO sqlalchemy.engine.Engine [raw sql] ()
INFO:sqlalchemy.engine.Engine:[raw sql] ()
2026-02-09 20:19:43,471 INFO sqlalchemy.engine.Engine BEGIN (implicit)
INFO:sqlalchemy.engine.Engine:BEGIN (implicit)
2026-02-09 20:19:43,565 INFO sqlalchemy.engine.Engine SELECT games.id AS games_id, games.chat_id AS games_chat_id, games.created_by AS games_created_by, games.date_time AS games_date_time, games.location AS games_location, games.max_players AS games_max_players, games.price AS games_price, games.payment_info AS games_payment_info, games.team_count AS games_team_count, games.gk_hours AS games_gk_hours, games.duration AS games_duration, games.status AS games_status, games.winner_team AS games_winner_team, games.score_a AS games_score_a, games.score_b AS games_score_b, games.score_c AS games_score_c, games.message_id AS games_message_id, games.channel_id AS games_channel_id, games.channel_message_id AS games_channel_message_id, games.admin_message_id AS games_admin_message_id, games.has_active_gk_a AS games_has_active_gk_a, games.has_active_gk_b AS games_has_active_gk_b, games.has_active_gk_c AS games_has_active_gk_c, games.created_at AS games_created_at 
FROM games 
WHERE games.id = $1::INTEGER
INFO:sqlalchemy.engine.Engine:SELECT games.id AS games_id, games.chat_id AS games_chat_id, games.created_by AS games_created_by, games.date_time AS games_date_time, games.location AS games_location, games.max_players AS games_max_players, games.price AS games_price, games.payment_info AS games_payment_info, games.team_count AS games_team_count, games.gk_hours AS games_gk_hours, games.duration AS games_duration, games.status AS games_status, games.winner_team AS games_winner_team, games.score_a AS games_score_a, games.score_b AS games_score_b, games.score_c AS games_score_c, games.message_id AS games_message_id, games.channel_id AS games_channel_id, games.channel_message_id AS games_channel_message_id, games.admin_message_id AS games_admin_message_id, games.has_active_gk_a AS games_has_active_gk_a, games.has_active_gk_b AS games_has_active_gk_b, games.has_active_gk_c AS games_has_active_gk_c, games.created_at AS games_created_at 
FROM games 
WHERE games.id = $1::INTEGER
2026-02-09 20:19:43,565 INFO sqlalchemy.engine.Engine [generated in 0.00052s] (47,)
INFO:sqlalchemy.engine.Engine:[generated in 0.00052s] (47,)
2026-02-09 20:19:43,646 INFO sqlalchemy.engine.Engine SELECT signups.id, signups.game_id, signups.user_id, signups.status, signups.team, signups.position, signups.created_at, signups.is_paid, users.user_id AS user_id_1, users.username, users.full_name, users.player_position, users.stats_matches, users.stats_mvp, users.rating, users.games_played, users.alt_positions, users.created_at AS created_at_1 
FROM signups JOIN users ON users.user_id = signups.user_id 
WHERE signups.game_id = $1::INTEGER ORDER BY signups.created_at
INFO:sqlalchemy.engine.Engine:SELECT signups.id, signups.game_id, signups.user_id, signups.status, signups.team, signups.position, signups.created_at, signups.is_paid, users.user_id AS user_id_1, users.username, users.full_name, users.player_position, users.stats_matches, users.stats_mvp, users.rating, users.games_played, users.alt_positions, users.created_at AS created_at_1 
FROM signups JOIN users ON users.user_id = signups.user_id 
WHERE signups.game_id = $1::INTEGER ORDER BY signups.created_at
2026-02-09 20:19:43,647 INFO sqlalchemy.engine.Engine [generated in 0.00050s] (47,)
INFO:sqlalchemy.engine.Engine:[generated in 0.00050s] (47,)
Failed to publish game task 47 to chat: Telegram server says - Bad Request: BUTTON_TYPE_INVALID
2026-02-09 20:19:43,834 INFO sqlalchemy.engine.Engine ROLLBACK
INFO:sqlalchemy.engine.Engine:ROLLBACK
ERROR:asyncio:Unclosed client session
client_session: <aiohttp.client.ClientSession object at 0x7ac24dbd5990>
ERROR:asyncio:Unclosed connector
connections: ['[(<aiohttp.client_proto.ResponseHandler object at 0x7ac24dc31600>, 5072980.917551495)]']
connector: <aiohttp.connector.TCPConnector object at 0x7ac24d2ef280>

--- CHECKING DB STATE ---
Remote EXEC: docker exec football-prod_app_1 python3 -c 'import asyncio; from app.db.database import async_session_maker; from app.db.models import Game; from sqlalchemy import select; async def check(): async with async_session_maker() as s: g = await s.get(Game, 47); print(f"Game 47 Status: {g.status}, MsgID: {g.message_id}, ChanMsgID: {g.channel_message_id}" if g else "Not found"); asyncio.run(check())'
  File "<string>", line 1
    import asyncio; from app.db.database import async_session_maker; from app.db.models import Game; from sqlalchemy import select; async def check(): async with async_session_maker() as s: g = await s.get(Game, 47); print(f"Game 47 Status: {g.status}, MsgID: {g.message_id}, ChanMsgID: {g.channel_message_id}" if g else "Not found"); asyncio.run(check())
                                                                                                                                    ^^^^^
SyntaxError: invalid syntax

